tinyc/test/bad/true-redeclare-struct.c
struct true
{
    int x;
};
int main()
{
    return 0;
}
